force-app/main/default/objects/FromEmailAddressESMapping__c/FromEmailAddressESMapping__c.object-meta.xml
<CustomObject>
    <description>IM Customer Center - This is for org-wide email address reference while sending emails</description>
    <label>From Email Address ES Mapping</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Sr No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>From Email Address ES Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>