force-app/main/default/objects/FromEmailAddressESMapping__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This will be used to choose the Edition with matching from email address</description>
    <label>Edition</label>
    <referenceTo>Edition__c</referenceTo>
    <relationshipName>FromEmailAddressESMappings</relationshipName>
    <type>Lookup</type>
</CustomField>