force-app/main/default/objects/FromEmailAddressESMapping__c/fields/Modules__c.field-meta.xml
<CustomField>
    <fullName>Modules__c</fullName>
    <description>This will be used to assign the from email address for specific modules</description>
    <label>Modules</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Forms</fullName>
            </value>
            <value>
                <fullName>Manuals</fullName>
            </value>
            <value>
                <fullName>Stand Design</fullName>
            </value>
            <value>
                <fullName>Badges</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>