force-app/main/default/objects/FromEmailAddressESMapping__c/fields/Org_Wide_From_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Org_Wide_From_Email_Addresses__c</fullName>
    <description>This is for reference global pick list value of Org_Wide_From_Email_Addresses.</description>
    <inlineHelpText>Please Select From Email Address.</inlineHelpText>
    <label>Org_Wide_From_Email_Addresses</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Org_Wide_From_Email_Addresses</valueSetName>
    </valueSet>
</CustomField>